# Identity

./: .gitmodules  CMakeLists.txt  Identity.data  Identity.html  Identity.js  Identity.wasm  LICENSE  MyProject.html  MyProject.js  MyProject.wasm  build_emscripten.sh  index.html  run_emscripten.sh
.github/workflows/: build-emscripten-deploy.yml  cmake-multi-platform.yml  cmake-single-platform.yml  gh-pages.yml
cmakes/: folder_utils.cmake
src/: .editorconfig  CMakeLists.txt  EngineImpl.cpp  EngineImpl.h  LittleEngine.cpp  LittleEngine.h  emscripten_shell.html  main.cpp
